# MHM

./: .cursorignore  .env.example  .gitattributes  .gitignore  .ruff.toml  AGENTS.md  AI_ARCHITECTURE.md  AI_CHANGELOG.md  AI_CONTEXT.md  AI_DEVELOPMENT_WORKFLOW.md  AI_DOCUMENTATION_GUIDE.md  AI_FUNCTION_REGISTRY.md  AI_MODULE_DEPENDENCIES.md  AI_ORIENTATION.md  AI_QUICK_REFERENCE.md  AI_REFERENCE.md  AI_RULES.md  AI_SESSION_STARTER.md  AI_TESTING_IMPROVEMENT_PLAN.md  AI_UI_MIGRATION_PLAN.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_BRIEF.md  CHANGELOG_DETAIL.md  CHANNEL_INTERACTION_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_HELPER_FUNCTION_AUDIT.md  CONFIGURATION_REFERENCE.md  CRITICAL_TEST_COVERAGE_GAPS.md  DEVELOPMENT_WORKFLOW.md  DIRECTORY_TREE.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_SYNC_CHECKLIST.md  FOCUSED_LEGACY_AUDIT_REPORT.md  FUNCTION_REGISTRY.md  FUNCTION_REGISTRY_DETAIL.md  HELPER_FUNCTION_REFACTOR_PLAN.md  HOW_TO_RUN.md  IMPROVEMENTS.md  LEGACY_CODE_MANAGEMENT_STRATEGY.md  LEGACY_CODE_REMOVAL_PLAN.md  (+38 more)
ai/: PRODUCT_AI_RESPONSE_INFLUENCE_AUDIT.md  README.md  SYSTEM_AI_GUIDE.md  SYSTEM_AI_OVERHAUL_PLAN.md  __init__.py  action_catalog.py  cache_manager.py  chatbot.py  command_interpreter.py  command_registry.py  context_builder.py  context_service.py  conversation_history.py  fallback_responses.py  interaction_types.py  lm_studio_client.py  lm_studio_manager.py  prompt_flows.py  prompt_manager.py  response_generator.py  response_postprocess.py
ai_development_docs/: AI_ARCHITECTURE.md  AI_BACKUP_GUIDE.md  AI_CHANGELOG.md  AI_DEVELOPMENT_WORKFLOW.md  AI_DOCUMENTATION_GUIDE.md  AI_ERROR_HANDLING_GUIDE.md  AI_FUNCTION_REGISTRY.md  AI_LEGACY_COMPATIBILITY_GUIDE.md  AI_LEGACY_REMOVAL_GUIDE.md  AI_LOGGING_GUIDE.md  AI_MODULE_DEPENDENCIES.md  AI_REFERENCE.md  AI_SESSION_STARTER.md  AI_TESTING_GUIDE.md
ai_development_tools/: .unused_imports_cache.json  AI_DEV_TOOLS_GUIDE.md  AI_DEV_TOOLS_IMPROVEMENT_PLAN.md  AI_PRIORITIES.md  AI_STATUS.md  README.md  __init__.py  ai_audit_detailed_results.json  ai_tools_runner.py  analyze_documentation.py  audit_function_registry.py  audit_module_dependencies.py  audit_package_exports.py  audit_summary.txt  auto_document_functions.py  config.py  config_validation_results.json  config_validator.py  consolidated_report.txt  decision_support.py  documentation_sync_checker.py  error_handling_coverage.py  error_handling_details.json  error_handling_phase1_candidates.json  error_handling_phase2_audit.json  file_auditor.py  file_rotation.py  function_discovery.py  generate_documentation.py  generate_function_registry.py  generate_module_dependencies.py  legacy_reference_cleanup.py  quick_status.py  regenerate_coverage_metrics.py  standard_exclusions.py  system_signals.py  tool_guide.py  unused_imports_checker.py  validate_ai_work.py  version_sync.py
ai_tools/: README.md  TRIGGER.md  ai_audit_detailed_results.json  ai_audit_results.json  ai_tools_runner.py  analyze_documentation.py  audit_function_registry.py  audit_module_dependencies.py  audit_summary.txt  auto_document_functions.py  config.py  config_validation_results.json  config_validator.py  documentation_sync_checker.py  file_auditor.py  function_discovery.py  generate_documentation.py  generate_function_registry.py  generate_module_dependencies.py  legacy_reference_cleanup.py  quick_audit.py  quick_status.py  regenerate_coverage_metrics.py  tool_guide.py  validate_ai_work.py  version_sync.py
archive/: AGENTS.md  AI_COLLABORATION_SYSTEM.md  FUNCTION_REGISTRY_preadjustment.md  HELPER_FUNCTION_REFACTOR_PLAN.md  LEGACY_CODE_REMOVAL_PLAN.md  MODULE_DEPENDENCIES_preadjustment.md  TEST_FAILURES_TODO.md  about-me.mdc  audit-first-protocol.mdc  code-quality.mdc  organization.mdc
bot/: ai_chatbot.py  base_channel.py  channel_factory.py  channel_registry.py  communication_manager.py  conversation_manager.py  discord_bot.py  email_bot.py  enhanced_command_parser.py  interaction_handlers.py  interaction_manager.py  telegram_bot.py  user_context_manager.py
checkins/: __init__.py  checkin_analytics.py  checkin_data_manager.py  checkin_dynamic_manager.py  checkin_schemas.py  checkin_service.py
communication/: COMMUNICATION_GUIDE.md  README.md  __init__.py
core/: ERROR_HANDLING_GUIDE.md  USER_DATA_MODEL.md  __init__.py  _storage_bridge.py  admin_account_provisioning.py  auto_cleanup.py  backup_manager.py  checkin_analytics.py  checkin_dynamic_manager.py  checkin_service.py  config.py  delivery.py  error_handling.py  file_auditor.py  file_locking.py  file_operations.py  headless_service.py  health_context_builder.py  health_signals.py  launch_env.py  logger.py  message_analytics.py  message_management.py  message_preview.py  natural_language_defaults.py  network_probe.py  pagination.py  personalization_management.py  profile_v2_io.py  profile_v2_schemas.py  response_tracking.py  runtime_state_storage.py  schedule_document_defaults.py  schedule_management.py  schedule_runtime.py  schedule_utilities.py  scheduler.py  scheduler_jobs.py  scheduler_maintenance.py  scheduler_task_reminders.py  (+27 more)
custom_data/: user_index.json
default_messages/: fun_facts.json  health.json  motivational.json  quotes_to_ponder.json  word_of_the_day.json
development_docs/: BACKUP_GUIDE.md  CHANGELOG_DETAIL.md  DIRECTORY_TREE.md  DOCUMENTATION_SYNC_CHECKLIST.md  DUPLICATE_FUNCTIONS_INVESTIGATION.md  FUNCTION_REGISTRY_DETAIL.md  HEALTH_INTEGRATION_PLAN.md  HIGH_COMPLEXITY_FUNCTIONS_ANALYSIS.md  LEGACY_CODE_MANAGEMENT_STRATEGY.md  LEGACY_REFERENCE_REPORT.md  LIST_OF_LISTS.md  (+16 more)
(+1243 files in other folders)
