[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhm"
version = "0.1.0"
description = "Management Hub Manager (MHM)"
readme = "README.md"
authors = [{ name = "MHM Contributors" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ui = ["PySide6"]

[tool.ruff]
line-length = 88
exclude = [
    ".venv",
    "node_modules",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "communication*", "ui*", "tasks*", "ai*", "notebook*", "tests*", "development_tools*", "scripts*", "user*"]
exclude = ["logs*", "resources*", "archive*", "development_docs*", "ai_development_docs*", "styles*", "tests/logs*", "tests/data*"]

[tool.setuptools.package-data]
"ui.generated" = ["*.py"]
