[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhm"
version = "0.1.0"
description = "Management Hub Manager (MHM)"
readme = "README.md"
authors = [{ name = "MHM Contributors" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ui = ["PySide6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "communication*", "ui*", "tasks*", "ai*", "notebook*", "tests*", "development_tools*", "scripts*", "user*"]
exclude = ["logs*", "resources*", "archive*", "development_docs*", "ai_development_docs*", "styles*", "tests/logs*", "tests/data*"]

[tool.setuptools.package-data]
"ui.generated" = ["*.py"]

# Pyright: whole-repo / IDE baseline (`pyright --project pyproject.toml`). Pylance discovers [tool.pyright] automatically.
# Former root `pyrightconfig.json` (JSONC) was merged here to reduce root dotfiles.
[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
reportReturnType = "none"
reportArgumentType = "warning"
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
reportGeneralTypeIssues = "warning"
reportUnboundVariable = "error"
reportUnsupportedDunderAll = "none"
ignore = []
exclude = [
  "scripts",
  "scripts/**",
  "ui/generated",
  "ui/generated/**",
  "**/__pycache__",
  "**/node_modules",
  "**/.pytest_cache",
  "**/.venv",
  "**/venv",
  "logs",
  "logs/**",
  "resources",
  "resources/**",
  "archive",
  "archive/**",
  "development_docs",
  "development_docs/**",
  "ai_development_docs",
  "ai_development_docs/**",
  "styles",
  "styles/**",
  "tests/logs",
  "tests/logs/**",
  "tests/data",
  "tests/data/**",
  "tests/temp",
  "tests/temp/**",
  "tests/fixtures",
  "tests/fixtures/**",
  ".git",
  ".pytest_cache",
  ".coverage",
  "*.pyc",
  "*.pyo",
]

# Bandit: loaded via `bandit -c pyproject.toml` (see development_tools/static_checks/analyze_bandit.py).
[tool.bandit]
exclude_dirs = [
  "tests",
  "development_tools/tests",
  "archive",
  "scripts/testing",
  "tests/fixtures",
  ".venv",
  "venv",
  "build",
  "dist",
  "node_modules",
  "__pycache__",
]
